# bipp-datasets

./: pyproject.toml
projects/NSAP/src/data/: get_raw_data.py
projects/airport_frieghts/: README.md  pyproject.toml
projects/airport_frieghts/src/data/: consolidated.py  get_raw_data.py  process.py
projects/cold-chain-projects/: README.md  pyproject.toml
projects/cold-chain-projects/src/data/: get_raw_data.py  lgd_mapping.py  process_data.py
projects/company-registrations/: README.md  pyproject.toml
projects/company-registrations/src/data/: get_data.py  process_raw_data.py  refine_consolidate_data.py
projects/company_registrations/: README.md  pyproject.toml
projects/company_registrations/src/data/: get_raw_data.py  process_foreign_cmp.py  process_ind_cmp.py  process_llp.py  process_raw_data.py
projects/ddugky_progress/: README.md  pyproject.toml
projects/ddugky_progress/src/data/: get_data.py
projects/dgcis_port_level/: README.md  pyproject.toml
projects/dgcis_port_level/src/data/: consolidate_and _process.py  get_raw_data.py
projects/gst/: README.md  pyproject.toml
projects/gst/src/data/: eway_bill_process.py  get_raw_data.py  gst_1_process.py  gst_3b_process.py  igst_on_import_process.py  registration_process.py  settelment_process.py  tax_collection_process.py
projects/input_survey/: README.md
projects/input_survey/crop_fert/: consolidateData_cropfert.py  reworked_transformTable4A_v1.py
projects/input_survey/crop_fert_composites/: reworked_transformTable4_v1.py  reworked_transformTable5_v1.py
projects/input_survey/noncrop/: reworked_cleanTable2A_v1.py  reworked_cleanTable2B_v1.py  reworked_cleanTable8_v1.py  reworked_transformData2A_2B_8_9A_v1.py
projects/input_survey/src/: LGD_map.json  compositeCrop_map.json  cropFert_map.json  get_raw_data.py  scrape_data.py
projects/input_survey/src/crop_fert/: consolidateData_cropfert.py  reworked_cleanTable4A_v1.py  reworked_transformTable4A_v1.py
projects/input_survey/src/crop_fert_composites/: consolidateData_cropfertComposites.py  reworked_cleanTable4_v1.py  reworked_cleanTable5EFG_v1.py  reworked_cleanTable5H_v1.py  reworked_cleanTable5IJKLLA_v1.py  reworked_transformTable4_v1.py  reworked_transformTable5_v1.py
projects/input_survey/src/data/crop_fert/: consolidateData_cropfert.py  reworked_cleanTable4A_v1.py  reworked_transformTable4A_v1.py
projects/input_survey/src/data/crop_fert_composites/: consolidateData_cropfertComposites.py  reworked_cleanTable4_v1.py  reworked_cleanTable5EFG_v1.py  reworked_cleanTable5H_v1.py  reworked_cleanTable5IJKLLA_v1.py  reworked_transformTable4_v1.py  reworked_transformTable5_v1.py
projects/input_survey/src/data/noncrop/: reworked_cleanTable2A_v1.py  reworked_cleanTable2B_v1.py  reworked_cleanTable8_v1.py  reworked_consolidateData_uncrop_v1.py
projects/input_survey/src/noncrop/: reworked_cleanTable2A_v1.py  reworked_cleanTable2B_v1.py  reworked_cleanTable8_v1.py  reworked_cleanTable9A_v1.py  reworked_consolidateData_uncrop_v1.py  reworked_transformData2A_2B_8_9A_v1.py
projects/money-stocks/: README.md  pyproject.toml
projects/money-stocks/src/data/: get_raw_data.py  process_data.py
projects/npci_td_bd_prod_stats/: README.md  pyproject.toml
projects/npci_td_bd_prod_stats/src/data/: get_data_prod_stats.py  get_data_td_bd.py
projects/nrlm-shg-g3-g13/src/data/: g3_g13_name_scraper.py  json_flat.py  mis_lgd_mapping_scraper.py
projects/pds_annavitran/: README.md  pyproject.toml
projects/pds_annavitran/src/data/: get_data_report_5.py  get_data_report_8.py
projects/pmksy_mipms_financial_report/: README.md  pyproject.toml
projects/pmksy_mipms_financial_report/src/data/: get_merge_data.py  get_raw_data.py
projects/poshan_tracker/: README.md  pyproject.toml
projects/poshan_tracker/src/data/: get_data.py
projects/rbi-banking-outlets/: README.md  pyproject.toml
projects/rbi-banking-outlets/src/: get_auth_token.py  get_dbie_api_parameters.py  get_raw_data.py  payload.json
projects/rbi-digital-payments/: README.md  pyproject.toml
projects/rbi-digital-payments/src/data/: get_raw_data.py  process_file.py
projects/rbi-money-stocks/: README.md  pyproject.toml
projects/rbi-money-stocks/notebooks/: scrape_and_process.ipynb
projects/rbi-money-stocks/src/data/: get_data_dbie.py  get_raw_data.py  process_data.py  process_data_dbie.py
projects/rbi_atm_pos/: README.md  pyproject.toml
projects/rbi_atm_pos/src/data/: clean_rbi_atm_pos.py  get_raw_data_rbi_atm_pos.py
projects/rbi_banking_transaction/: README.md  pyproject.toml
projects/rbi_banking_transaction/src/data/: data_consolidation.py  get_raw_data.py
projects/retail_prices/: README.md  pyproject.toml
projects/retail_prices/src/: consolidate_national_level.py  consolidate_state_wise_raw_data.py  get_raw_data.py
projects/retail_prices_devesh_002/: README.md  pyproject.toml
projects/retail_prices_devesh_002/src/: main.py
projects/udise/: README.md  error.txt  pyproject.toml  scraper_devesh.py
projects/udise/notebooks/: error_log.txt  parse_enrollment_details.py
projects/udise/src/data/: build_school_index.py  change_paths.py  core.py  get_raw_data.py  get_school_detail.py  parse_school_reports.py  process_geojson_interim.py  scrape_report_cards.py  scrape_udise_geojson.py  scrape_udise_school_list_tabular.py  scrape_udise_state_dist_blocks.py
projects/union-budget/src/: cleaning-union-budget-tax-revenue-raw-data.py
projects/wto/: README.md  pyproject.toml
projects/wto/src/: get_raw_data.py  wto.py
