[tool.poetry]
name = "bipp-datasets"
version = "0.1.0"
description = "Monorepo for all the datasets generated at BIPP"
authors = ["Bharti Institute of Public Policy<surya_kandukuri@isb.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
tabula-py = "^2.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^22.3.0"
isort = "^5.4.2"
pytest = "^5.4.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .eggs
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile="black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
