[tool.poetry]
name = "pmksy_mipms_financial_report"
version = "0.1.0"
description = "The PMKSY Micro Irrigation Progress Monitoring System Financial Progress Report project aims to monitor and analyze the financial progress of micro-irrigation initiatives under the Pradhan Mantri Krishi Sinchayee Yojana (PMKSY) program. The data is sourced from the official PMKSY website's Financial Progress Report page https://pmksy.gov.in/microirrigation/Financial_Report.aspx."
authors = ["karan khatke"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
requests = "^2.31.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
