[tool.poetry]
name = "rbi-digital-payments"
version = "0.1.0"
description = "abc"
authors = ["Name of the authors working on the project"]

[tool.poetry.dependencies]
python = ">=3.8"
python-dotenv = "^0.13.0"
bs4 = "^0.0.1"
polars = "^0.20.3"
xlsx2csv = "^0.8.2"
openpyxl = "^3.1.2"
pyarrow = "^14.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
