[tool.poetry]
name = "rbi_banking_transaction"
version = "0.1.0"
description = "This project aims to collect and process banking transaction data from the Reserve Bank of India (RBI) website. The primary data source is the NEFT (National Electronic Funds Transfer) transactions, Internet Banking transactions, Mobile Banking, RTGS (Real Time Gross Settlement)  available on the RBI website."
authors = ["karan khatke"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
