[tool.poetry]
name = "Retail_prices"
version = "0.1.0"
description = "Extracts the retail daily statewise  retail price reports published by the department of Consumer Affairs"
authors = ["shravani"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.13.0"
beautifulsoup4 = "^4.12.2"
selenium = "^3.141.0"
chromedriver-auto = "^118.0.5993.70"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
