[tool.poetry]
name = "Retail_prices"
version = "0.1.0"
description = "Extracts the retail daily statewise  retail price reports published by the department of Consumer Affairs"
authors = ["shravani"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^0.13.0"
scrapy = "^2.11.0"
pandas = "^2.1.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
