[tool.poetry]
name = "retail_prices_devesh_002"
version = "0.1.0"
description = ""
authors = ["devesh-002 <deveshmarwah2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4="4.9.3"
pandas="1.3.0"
regex="2022.3.15"
Requests="2.31.0"
selenium="4.14.0"
webdriver_manager="4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
