[tool.poetry]
name = "udise"
version = "0.1.0"
description = "UDISE SchoolGIS data"
authors = ["Gursharan Singh Dhanjal"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-dotenv = "^0.13.0"
requests = "^2.28.1"
hjson = "^3.1.0"
pandas = "^1.5.1"
wasabi = {path = "../../libs/wasabi"}
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
