[tool.poetry]
name = "udise"
version = "0.1.0"
description = "UDISE SchoolGIS data"
authors = ["Gursharan Singh Dhanjal"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
polars = "^0.19.15"
httpx = "^0.25.1"
beautifulsoup4 = "^4.12.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
