[tool.poetry]
name = "udise"
version = "0.1.0"
description = "UDISE SchoolGIS data"
authors = ["Gursharan Singh Dhanjal"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
polars = "^0.19.15"
httpx = "^0.25.1"
beautifulsoup4 = "^4.12.2"
camelot-py = "^0.11.0"
ipykernel = "^6.26.0"
opencv-python = "^4.8.1.78"
ghostscript = "^0.7"
pyarrow = "^14.0.1"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
camelot-py = {extras = ["plot"], version = "^0.11.0"}
ipympl = "^0.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
