[tool.poetry]
name = "WTO"
version = "0.1.0"
description = "Extracts the different prodocts on the WTO website maintaining their heirarchy"
authors = ["shravani"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^0.13.0"
pandas = "^2.1.2"
playwright = "^1.40.0"
ipykernel = "^6.29.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
